# seerlens

./: .dockerignore  .editorconfig  .env.local.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  Seerlens.sln
.github/workflows/: ci.yml  release.yml
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  download.ts  format.ts  index.css  main.tsx  types.ts  useLive.ts
docs/: ci-eval-gate.yml  design.md  reference.md  roadmap.md
samples/ChatSample/: ChatSample.csproj  DemoChatClient.cs  EvalDemoClient.cs  Program.cs
samples/SkSample/: Program.cs  SkSample.csproj
sdk/js/: README.md  example.js  index.js  package.json
sdk/python/: README.md  example.py  pyproject.toml  test_seerlens.py
sdk/python/seerlens/: __init__.py
src/Seerlens.Collector/: AgentRunner.cs  AiProvider.cs  Alerter.cs  Comparison.cs  EvalCommand.cs  EvalScheduler.cs  EvalService.cs  EvalStore.cs  GoldenSets.cs  LiveFeed.cs  Models.cs  Otlp.cs  Pricing.cs  Program.cs  Scoring.cs  Seerlens.Collector.csproj  SettingsStore.cs  TraceStore.cs
src/Seerlens.Evals/: EvalRunner.cs  Evals.cs  Scorers.cs  Seerlens.Evals.csproj  ToolSequence.cs
src/Seerlens.Sdk/: Exporter.cs  OtlpExport.cs  Payloads.cs  Seerlens.Sdk.csproj  Seerlens.cs  SeerlensChatClient.cs  SeerlensTrace.cs  ServiceCollectionExtensions.cs  TraceBuilder.cs
src/Seerlens.SemanticKernel/: Seerlens.SemanticKernel.csproj  SeerlensFilter.cs  SeerlensKernelBuilderExtensions.cs
tests/Seerlens.Collector.Tests/: AgentEvalTests.cs  AgentRunnerTests.cs  (+15 more)
(+21 files in other folders)
